--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-numpy>=1.22.3
-pandas>=1.4.2
-plotly>=5.7.0
-python-dotenv>=0.20.0
-scipy>=1.8.0
-streamlit>=1.8.1
+pandas>=1.5.3
+ydata-profiling>=4.1.1
+streamlit>=1.20.0
 toml>=0.10.2
-xlrd>=2.0.1
-openpyxl>=3.0.9
